--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       </div>
       <span class="fa fa-bars menu-icon"></span>
       <div class="header-right">
-        <a href="#">レッスン</a>
-        <a href="#">新規登録</a>
-        <a href="#" class="login">ログイン</a>
+        <a href="#">レッスン受けてみる</a>
+        <a href="#">新規登録してみる</a>
+        <a href="#" class="login">ログインしてみる
+        </a>
       </div>
     </div>
   </header>
